--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -45,7 +45,7 @@
 </p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: N&#283;kter&eacute; z&#345;&iacute;dka pou&#382;&iacute;van&eacute; pracovn&iacute; plochy jsou ve v&yacute;choz&iacute;m nastaven&iacute; deaktivov&aacute;ny. Ty jsou n&iacute;&#382;e <code>D</code> ozna&#269;eny. Deaktivovanou pracovn&iacute; plochu lze aktivovat v <a href="../Preferences_Editor.html#Workbenches/cs" title="Preferences Editor">P&#345;edvolb&aacute;ch</a>. Deaktivovan&eacute; pracovn&iacute; plochy lze st&aacute;le aktivovat pomoc&iacute; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> menu <a href="../index.php?title=Std_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Workbench/cs (page does not exist)">TabBar slektoru Pracovn&iacute; plochy</a>.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>. Nejedn&aacute; se vlastn&#283; o pracovn&iacute; plochu, ale sp&iacute;&scaron;e o kategorii 'standardn&iacute;ch' p&#345;&iacute;kaz&#367; a n&aacute;stroj&#367;, kter&eacute; lze pou&#382;&iacute;t ve v&scaron;ech pracovn&iacute;ch ploch&aacute;ch.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> for building and solving mechanical assemblies. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Pracovn&iacute; plocha Assembly</a> pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a> for working with architectural elements and creating <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> models. It combines the Arch Workbench and the formerly external BIM Workbench available in <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../CAM_Workbench.html" title="CAM Workbench">CAM Workbench</a> is used to produce G-Code instructions. This workbench was called "Path Workbench" in <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Draft_Workbench.html" title="Draft Workbench">Draft Workbench</a> contains 2D tools and basic 2D and 3D CAD operations.</li></ul>
@@ -101,12 +101,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111225630
+Cached time: 20260111225732
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.134 seconds
-Real time usage: 0.282 seconds
+CPU time usage: 0.123 seconds
+Real time usage: 0.229 seconds
 Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -117,18 +117,18 @@ Unstrip post&#8208;expand size: 4246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.022      1 -total
- 52.02%   23.422      1 Template:Userdocnavi/cs
- 12.93%    5.822      1 Template:MenuCommand
- 10.01%    4.507      5 Template:Incode
-  7.27%    3.275      2 Template:Docnav
-  5.48%    2.467      1 Template:Navigation_menu_2
-  5.06%    2.277      2 Template:VersionMinus
-  5.02%    2.259      3 Template:Version
-  4.70%    2.115      1 Template:Button
+100.00%   23.185      1 -total
+ 45.49%   10.546      1 Template:Userdocnavi/cs
+ 29.91%    6.934      1 Template:Navigation_menu_2
+ 11.62%    2.693      2 Template:Docnav
+ 10.15%    2.353      5 Template:Incode
+  9.59%    2.224      2 Template:VersionMinus
+  8.46%    1.961      3 Template:Version
+  5.16%    1.197      1 Template:Button
+  4.73%    1.096      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111225630 and revision id 1736725. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111225731 and revision id 1736727. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
