--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -46,7 +46,7 @@
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>. Nejedn&aacute; se vlastn&#283; o pracovn&iacute; plochu, ale sp&iacute;&scaron;e o kategorii 'standardn&iacute;ch' p&#345;&iacute;kaz&#367; a n&aacute;stroj&#367;, kter&eacute; lze pou&#382;&iacute;t ve v&scaron;ech pracovn&iacute;ch ploch&aacute;ch.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Pracovn&iacute; plocha Assembly</a> pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a> for working with architectural elements and creating <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> models. It combines the Arch Workbench and the formerly external BIM Workbench available in <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">Pracovn&iacute; plocha BIM</a> pro pr&aacute;ci s architektonick&yacute;mi prvky a vytv&aacute;&#345;en&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> model&#367;. Slu&#269;uje pracovn&iacute; plochu Arch a d&#345;&iacute;ve extern&iacute; pracovn&iacute; plochu BIM, kter&aacute; je k dispozici v <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../CAM_Workbench.html" title="CAM Workbench">CAM Workbench</a> is used to produce G-Code instructions. This workbench was called "Path Workbench" in <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Draft_Workbench.html" title="Draft Workbench">Draft Workbench</a> contains 2D tools and basic 2D and 3D CAD operations.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../FEM_Workbench.html" title="FEM Workbench">FEM Workbench</a> provides Finite Element Analysis (FEA) workflow.</li></ul>
@@ -101,12 +101,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111225732
+Cached time: 20260111230050
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.123 seconds
-Real time usage: 0.229 seconds
+CPU time usage: 0.120 seconds
+Real time usage: 0.234 seconds
 Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -117,18 +117,18 @@ Unstrip post&#8208;expand size: 4246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.185      1 -total
- 45.49%   10.546      1 Template:Userdocnavi/cs
- 29.91%    6.934      1 Template:Navigation_menu_2
- 11.62%    2.693      2 Template:Docnav
- 10.15%    2.353      5 Template:Incode
-  9.59%    2.224      2 Template:VersionMinus
-  8.46%    1.961      3 Template:Version
-  5.16%    1.197      1 Template:Button
-  4.73%    1.096      1 Template:MenuCommand
+100.00%   16.887      1 -total
+ 31.09%    5.250      1 Template:Userdocnavi/cs
+ 25.41%    4.291      2 Template:Docnav
+ 12.10%    2.043      1 Template:Navigation_menu_2
+ 11.77%    1.988      3 Template:Version
+  8.66%    1.463      5 Template:Incode
+  6.15%    1.038      1 Template:Button
+  6.00%    1.014      1 Template:MenuCommand
+  5.92%    0.999      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111225731 and revision id 1736727. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111230049 and revision id 1736729. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
