--- a/wiki/cs/CAM_Workbench.html
+++ b/wiki/cs/CAM_Workbench.html
@@ -1,12 +1,12 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">CAM Workbench/cs</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="cs" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-CAM+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Arbeitsbereich CAM (81% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich CAM (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../CAM_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="CAM Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="CNC G-Kod Tezgah&#305; (1% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Ambiente de trabajo Trayectoria (6% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier CAM (93% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Atelier CAM (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="CAM Workbench/hr (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><a href="../it/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente CAM (93% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#346;rodowisko pracy CAM (93% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../it/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente CAM (98% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../pl/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy CAM (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Bancada de trabalho Path (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Bancada de trabalho Path (6% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Path Workbench/Atelierul Traiectorii (4% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -18,7 +18,7 @@
 <li><a href="../zh-cn/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="&#36335;&#24452;&#24037;&#20316;&#21488; (4% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../zh-tw/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="CAM Workbench/zh-tw (0% translated)" lang="zh-Hant-TW" dir="ltr">&#20013;&#25991;&#65288;&#33274;&#28771;&#65289;</a></li>
 <li><a href="../ja/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="CAM&#12527;&#12540;&#12463;&#12505;&#12531;&#12481; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
-<li><a href="../ko/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="CAM &#51089;&#50629;&#45824; (6% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
+<li><a href="../ko/CAM_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="CAM &#51089;&#50629;&#45824; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_BIM.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a></div>
@@ -392,10 +392,10 @@
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a class="mw-selflink selflink">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a class="mw-selflink selflink">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
 <hr>
 <ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
@@ -403,35 +403,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251107102037
+Cached time: 20260111230421
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.185 seconds
-Real time usage: 0.208 seconds
-Preprocessor visited node count: 570/1000000
+CPU time usage: 0.188 seconds
+Real time usage: 0.348 seconds
+Preprocessor visited node count: 571/1000000
 Post&#8208;expand include size: 13924/2097152 bytes
 Template argument size: 4569/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3570/5000000 bytes
+Unstrip post&#8208;expand size: 3592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.950      1 -total
- 36.03%    6.827      1 Template:CAM_Tools_navi/cs
- 22.04%    4.177      1 Template:Userdocnavi/cs
- 16.54%    3.135      2 Template:Navigation_menu_2
-  7.67%    1.453      1 Template:Docnav
-  5.62%    1.064      1 Template:Caption
-  5.08%    0.963      7 Template:Emphasis
-  4.70%    0.891      4 Template:MenuCommand
-  4.42%    0.837      1 Template:VersionPlus
-  4.33%    0.821      1 Template:TOCright
+100.00%   30.691      1 -total
+ 27.17%    8.338      1 Template:CAM_Tools_navi/cs
+ 15.89%    4.878      2 Template:Navigation_menu_2
+ 15.53%    4.766      1 Template:Userdocnavi/cs
+ 10.55%    3.238      7 Template:Emphasis
+  9.11%    2.796      1 Template:VersionPlus
+  8.59%    2.636      1 Template:Docnav
+  6.42%    1.971      4 Template:MenuCommand
+  6.14%    1.885      1 Template:Caption
+  5.91%    1.813      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:338118-0!canonical and timestamp 20251107102037 and revision id 1682618. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:338118-0!canonical and timestamp 20260111230421 and revision id 1682618. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
