--- a/wiki/de/TechDraw_FaceCenterLine.html
+++ b/wiki/de/TechDraw_FaceCenterLine.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw FaceCenterLine/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+FaceCenterLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_FaceCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw FaceCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Ligne centrale &agrave; une face (67% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Linea centrale alla faccia (67% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -81,24 +81,17 @@
 <p><span id="Options"></span>
 </p>
 <h2><span class="mw-headline" id="Optionen">Optionen</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li><b>Orientatierung</b>:
-<ul><li><b>Vertikal</b>: Gibt die vertikale Ausrichtung f&uuml;r die Mittellinie vor. Wird f&uuml;r 2PunkteMittellinien ignoriert.</li>
-<li><b>Horizontal</b>: Gibt die horizontale Ausrichtung f&uuml;r die Mittellinie vor. Wird f&uuml;r 2PunkteMittellinien ignoriert.</li>
-<li><b>Ausgerichtet</b>: Nicht verf&uuml;gbar f&uuml;r Fl&auml;chenMittellinien. Gibt der Mittellinie vor, der ermittelten Ausrichtung der ausgew&auml;hlten Kanten f&uuml;r 2LinienMittellinien zu folgen. Wird f&uuml;r 2PunkteMittellinien ignoriert.</li></ul></li>
+<ul><li><b>Ausrichtung</b>:
+<ul><li><b>Vertikal</b>: Gibt die vertikale Ausrichtung f&uuml;r die Mittellinie vor. Wird f&uuml;r Mittellinien zwischen 2 Punkten ignoriert.</li>
+<li><b>Horizontal</b>: Gibt die horizontale Ausrichtung f&uuml;r die Mittellinie vor. Wird f&uuml;r Mittellinien zwischen 2 Punkten ignoriert.</li>
+<li><b>Ausgerichtet</b>: Nicht verf&uuml;gbar f&uuml;r Mittellinien von Fl&auml;chen. Gibt der Mittellinie vor, der gemittelten Ausrichtung der ausgew&auml;hlten Kanten f&uuml;r Mittellinien zwischen 2 Linien zu folgen. Wird f&uuml;r Mittellinien zwischen 2 Punkten ignoriert.</li></ul></li>
+<li><b>Stil</b>: Die Linienart der Mittellinie.</li>
+<li><b>Farbe</b>: Die Farbe der Mittellinie.</li>
+<li><b>St&auml;rke</b>: Die Linienbreite der Mittellinie.</li>
 <li><b>Horizontal verschieben</b>: Bewegt die Mittellinie aus ihrer normalen Position nach links oder rechts.</li>
 <li><b>Vertikal verschieben</b>: Bewegt die Mittellinie aus ihrer normalen Position nach oben oder unten.</li>
 <li><b>Drehen</b>: Dreht die Mittellinie um ihren Mittelpunkt (in Grad. + gegen den Uhrzeigersinn, - im Uhrzeigersinn).</li>
-<li><b>Verl&auml;ngern um</b>: Verl&auml;ngert die Mittellinie um diesen Wert.</li>
-<li><b>Farbe</b>: Die Farbe der Mittllinie.</li>
-<li><b>St&auml;rke</b>: Strichst&auml;rke der Mittellinie.</li>
-<li><b>Stil</b>: Linienart der Mittellinie. Die Optionen sind:
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Continuous-line.svg&amp;filetimestamp=20240522200907&amp;.html" class="mw-file-description"><img src="../File/Continuous-line.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Volllinie</b></li>
-<li><span typeof="mw:File"><a href="../index.php?title=Dash-line.svg&amp;filetimestamp=20240522200957&amp;.html" class="mw-file-description"><img src="../File/Dash-line.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Strichlinie</b></li>
-<li><span typeof="mw:File"><a href="../index.php?title=Dot-line.svg&amp;filetimestamp=20240522201015&amp;.html" class="mw-file-description"><img src="../File/Dot-line.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Punkt</b></li>
-<li><span typeof="mw:File"><a href="../index.php?title=DashDot-line.svg&amp;filetimestamp=20240522200946&amp;.html" class="mw-file-description"><img src="../File/DashDot-line.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Strich-Punkt</b></li>
-<li><span typeof="mw:File"><a href="../index.php?title=DashDotDot-line.svg&amp;filetimestamp=20240522200924&amp;.html" class="mw-file-description"><img src="../File/DashDotDot-line.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Strich-Zweipunkt</b></li></ul></li></ul>
-</div>
+<li><b>Erweitern durch</b>: Verl&auml;ngert die Mittellinie um diesen Wert.</li></ul>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
@@ -155,35 +148,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111212109
+Cached time: 20260111230426
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.119 seconds
-Preprocessor visited node count: 409/1000000
+CPU time usage: 0.092 seconds
+Real time usage: 0.233 seconds
+Preprocessor visited node count: 403/1000000
 Post&#8208;expand include size: 29067/2097152 bytes
 Template argument size: 11233/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1662/5000000 bytes
+Unstrip post&#8208;expand size: 1666/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.027      1 -total
- 30.58%    6.735      1 Template:TechDraw_Tools_navi/de
- 19.63%    4.325      2 Template:Navigation_menu_2
- 18.30%    4.031      1 Template:GuiCommand/de
- 11.27%    2.482      2 Template:PropertyView/de
-  8.44%    1.859      2 Template:Docnav/de
-  6.54%    1.440      1 Template:Userdocnavi/de
-  5.85%    1.288      2 Template:Variable
-  5.12%    1.127      1 Template:Caption
-  4.36%    0.960      1 Template:Version/de
+100.00%   63.251      1 -total
+ 15.19%    9.607      1 Template:GuiCommand/de
+ 14.91%    9.433      1 Template:TechDraw_Tools_navi/de
+ 10.10%    6.387      2 Template:PropertyView/de
+  8.96%    5.667      2 Template:Navigation_menu_2
+  8.08%    5.112      3 Template:Button
+  8.07%    5.105      1 Template:Version/de
+  8.03%    5.076      1 Template:Userdocnavi/de
+  7.90%    4.996      1 Template:MenuCommand
+  7.66%    4.846      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111212109 and revision id 1736437. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111230425 and revision id 1736736. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
